artist overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 /* Global Styles */
+
 :root {
   --primary-color: #6fa0d1;
   --dark-color: #343a40;
@@ -680,17 +681,25 @@ button {
     margin: auto;
     overflow: hidden;
     padding:  3rem;
-    margin-top: 6rem;
-    margin-bottom: 3rem;
+    margin-top: 7.7rem;
+    /* margin-bottom: 3rem; */
     position: relative;
     background: url('./img/photo-1470229722913-7c0e2dbbafd3.avif') no-repeat center center/cover;
-    border-radius: 5%;
+    /* border-radius: 5%; */
     height: 100vh;
     opacity: 0.8;
   }
   
 
   /* Profiles Page */
+  .profilecontainer{
+    margin-top: 7.6rem;
+    grid-template-columns: 1fr;
+    text-align: center;
+    background: url('./img/landing\ img.jpg') no-repeat center center/cover;
+  }
+
+
   .profile {
     grid-template-columns: 1fr;
     text-align: center;
